Fix for horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,10 @@ iframe {
   left: auto !important;
 }
 
+.row-full {
+  margin: 0;
+}
+
 /* Selection */
 
 ::-moz-selection {
